force-app/main/default/objects/sked_Operation_Record__c/sked_Operation_Record__c.object-meta.xml
<CustomObject>
    <label>Operation Record</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Operation Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>