force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Account__c.field-meta.xml
<CustomField>
    <fullName>sked_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>sked_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>