force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Account_Code__c</fullName>
    <formula>sked_Account__r.UFID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>