force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Actual_Drive_End__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Drive_End__c</fullName>
    <label>Actual Drive End</label>
    <type>DateTime</type>
</CustomField>