force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Actual_Drive_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Drive_End_Time__c</fullName>
    <label>Actual Drive End Time</label>
    <type>Time</type>
</CustomField>