force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Actual_Drive_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Drive_Start__c</fullName>
    <label>Actual Drive Start</label>
    <type>DateTime</type>
</CustomField>