force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Actual_Drive_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Drive_Start_Date__c</fullName>
    <label>Actual Drive Start Date</label>
    <type>Date</type>
</CustomField>