force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Changed_Drive_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Changed_Drive_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changed Drive Location</label>
    <type>Checkbox</type>
</CustomField>