force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Changed_Drive_Location_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Changed_Drive_Location_Reason__c</fullName>
    <label>Changed Drive Location Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior to equipment setup</fullName>
            </value>
            <value>
                <fullName>After equipment setup started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>