force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>sked_Connectivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connectivity</label>
    <type>Checkbox</type>
</CustomField>