force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Connectivity_Detail__c.field-meta.xml
<CustomField>
    <fullName>sked_Connectivity_Detail__c</fullName>
    <label>Connectivity Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wired</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>