force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Connectivity_Handheld__c.field-meta.xml
<CustomField>
    <fullName>sked_Connectivity_Handheld__c</fullName>
    <label>Handheld (Connectivity)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>