force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Connectivity_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Connectivity_Reason__c</fullName>
    <label>Connectivity Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to Connect</fullName>
            </value>
            <value>
                <fullName>Slow Network Performance</fullName>
            </value>
            <value>
                <fullName>No redundant WAP or Master</fullName>
            </value>
            <value>
                <fullName>No wired equipment available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>