force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Connectivity_Total_Devices__c.field-meta.xml
<CustomField>
    <fullName>sked_Connectivity_Total_Devices__c</fullName>
    <label>Total # of Devices (Connectivity)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>