force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Donor_Ambassadors_Requested__c.field-meta.xml
<CustomField>
    <fullName>sked_Donor_Ambassadors_Requested__c</fullName>
    <label>Donor Ambassadors Requested</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>