force-app/main/default/objects/sked_Operation_Record__c/fields/sked_DRD_Rep_Contact__c.field-meta.xml
<CustomField>
    <fullName>sked_DRD_Rep_Contact__c</fullName>
    <label>DRD Rep Contact #</label>
    <type>Phone</type>
</CustomField>