force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Date__c</fullName>
    <formula>sked_Drive__r.sked_Drive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>