force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Drive_Delayed__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Delayed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Not An Actual Late Start</inlineHelpText>
    <label>Drive Delayed</label>
    <type>Checkbox</type>
</CustomField>