force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Drive_Delayed_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Delayed_Reason__c</fullName>
    <label>Drive Delayed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extreme Weather: ex. 2 hour school delay</fullName>
            </value>
            <value>
                <fullName>Sponsor Activities: Fire Drills, Lock Downs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>