force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Drive_Issues__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Issues__c</fullName>
    <label>Drive Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened Late</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed Early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>