force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Drive_Shift__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift__c</fullName>
    <label>Drive Shift</label>
    <referenceTo>sked_Drive_Shift__c</referenceTo>
    <relationshipLabel>Operation Records</relationshipLabel>
    <relationshipName>sked_Operation_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>