force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Drive_Shift_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift_Start_Time__c</fullName>
    <formula>sked_Drive_Shift__r.sked_Min_Shift_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Shift Start Time</label>
    <type>Time</type>
</CustomField>