force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Type__c</fullName>
    <formula>TEXT(sked_Drive__r.sked_Type_of_Drive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Type</label>
    <type>Text</type>
</CustomField>