force-app/main/default/objects/sked_Operation_Record__c/fields/sked_eBDR_Equipment_Problem_Failure__c.field-meta.xml
<CustomField>
    <fullName>sked_eBDR_Equipment_Problem_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eBDR Equipment Problem/Failure</label>
    <type>Checkbox</type>
</CustomField>