force-app/main/default/objects/sked_Operation_Record__c/fields/sked_eBDR_Master__c.field-meta.xml
<CustomField>
    <fullName>sked_eBDR_Master__c</fullName>
    <label>Master (eBDR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>