force-app/main/default/objects/sked_Operation_Record__c/fields/sked_eBDR_No_of_Issue_Devices__c.field-meta.xml
<CustomField>
    <fullName>sked_eBDR_No_of_Issue_Devices__c</fullName>
    <label># of Devices with Issue (eBDR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>