force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Improper_Room_Conditions__c.field-meta.xml
<CustomField>
    <fullName>sked_Improper_Room_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improper Room Conditions</label>
    <type>Checkbox</type>
</CustomField>