force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Improper_Room_Conditions_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Improper_Room_Conditions_Reason__c</fullName>
    <label>Improper Room Conditions Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inadequate lighting</fullName>
            </value>
            <value>
                <fullName>Odor</fullName>
            </value>
            <value>
                <fullName>Infestation</fullName>
            </value>
            <value>
                <fullName>Room size</fullName>
            </value>
            <value>
                <fullName>Room not ready</fullName>
            </value>
            <value>
                <fullName>Temperature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>