force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Last_Modified_User__c.field-meta.xml
<CustomField>
    <fullName>sked_Last_Modified_User__c</fullName>
    <label>Last Modified User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>