force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Late_End_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Late_End_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late End Drive</label>
    <type>Checkbox</type>
</CustomField>