force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Late_End_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Late_End_Reason__c</fullName>
    <label>Late End Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over-presentation at end of drive</fullName>
            </value>
            <value>
                <fullName>Over-presentation throughout</fullName>
            </value>
            <value>
                <fullName>Prolonged donor processing time</fullName>
            </value>
            <value>
                <fullName>End of drive donor reaction</fullName>
            </value>
            <value>
                <fullName>Registration remained open past scheduled drive</fullName>
            </value>
            <value>
                <fullName>Equipment issues</fullName>
            </value>
            <value>
                <fullName>Uncontrollable event</fullName>
            </value>
            <value>
                <fullName>Staff call out</fullName>
            </value>
            <value>
                <fullName>Multi-shift Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>