force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Limited_Access_to_Unload__c.field-meta.xml
<CustomField>
    <fullName>sked_Limited_Access_to_Unload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Access to Unload</label>
    <type>Checkbox</type>
</CustomField>