force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Limited_Access_to_Unload_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Limited_Access_to_Unload_Reason__c</fullName>
    <label>Limited Access to Unload Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elevator size</fullName>
            </value>
            <value>
                <fullName>Unloading dock too small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>