force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Locked__c.field-meta.xml
<CustomField>
    <fullName>sked_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>