force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Master_Server_Issue__c.field-meta.xml
<CustomField>
    <fullName>sked_Master_Server_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Server Issue</label>
    <type>Checkbox</type>
</CustomField>