force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Master_Server_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Master_Server_Issue_Reason__c</fullName>
    <label>Master Server Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Database Expired/Master not Updated</fullName>
            </value>
            <value>
                <fullName>Site Master Setup Failed</fullName>
            </value>
            <value>
                <fullName>Site Master Setup Running too Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>