force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Missing_Equipment_Supply__c.field-meta.xml
<CustomField>
    <fullName>sked_Missing_Equipment_Supply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing/broken Equipment/Supply</label>
    <type>Checkbox</type>
</CustomField>