force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Missing_Equipment_Supply_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Missing_Equipment_Supply_Reason__c</fullName>
    <label>Missing/broken Equipment/Supply Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document missing equipment/supply</fullName>
            </value>
            <value>
                <fullName>Missing eBDR equipment</fullName>
            </value>
            <value>
                <fullName>Missing equipment (ex: Hemocues, scales)</fullName>
            </value>
            <value>
                <fullName>Missing supplies (ex: blood bags, tubes)</fullName>
            </value>
            <value>
                <fullName>Missing supplies-Kitting (ex: tubes, arm prep)</fullName>
            </value>
            <value>
                <fullName>Missing equipment</fullName>
                <isActive>false</isActive>
                <label>Missing equipment</label>
            </value>
            <value>
                <fullName>Missing supplies</fullName>
                <isActive>false</isActive>
                <label>Missing supplies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>