force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>sked_Notes_Comments__c</fullName>
    <label>Notes/Comments</label>
    <type>TextArea</type>
</CustomField>