force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Power_Red_Machines_Sent__c.field-meta.xml
<CustomField>
    <fullName>sked_Power_Red_Machines_Sent__c</fullName>
    <label>Power Red Machines Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>