force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>sked_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>sked_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>