force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked_Primary_Contact_Phone__c</fullName>
    <formula>sked_Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Phone</label>
    <type>Text</type>
</CustomField>