force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Projected_Products__c.field-meta.xml
<CustomField>
    <fullName>sked_Projected_Products__c</fullName>
    <formula>sked_Drive__r.sked_Total_Products_Projected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>