force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Purple_Top__c.field-meta.xml
<CustomField>
    <fullName>sked_Purple_Top__c</fullName>
    <formula>sked_Drive__r.sked_Purple_Top_Drive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purple Top</label>
    <type>Checkbox</type>
</CustomField>