force-app/main/default/objects/sked_Operation_Record__c/fields/sked_QC_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_QC_Issue_Reason__c</fullName>
    <label>QC Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QC Error</fullName>
            </value>
            <value>
                <fullName>Fail Password problem</fullName>
            </value>
            <value>
                <fullName>QC Error/Fail Password problem</fullName>
                <isActive>false</isActive>
                <label>QC Error/Fail Password problem</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>