force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Room_Name__c</fullName>
    <formula>sked_Drive_Site__r.sked_Room_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Name</label>
    <type>Text</type>
</CustomField>