force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Room_Not_Accessible_Locked__c.field-meta.xml
<CustomField>
    <fullName>sked_Room_Not_Accessible_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room Not Accessible/Locked</label>
    <type>Checkbox</type>
</CustomField>