force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Room_Not_Accessible_Locked_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Room_Not_Accessible_Locked_Reason__c</fullName>
    <label>Room Not Accessible/Locked Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building locked</fullName>
            </value>
            <value>
                <fullName>Sponsor not available</fullName>
            </value>
            <value>
                <fullName>Room in use</fullName>
            </value>
            <value>
                <fullName>Room locked</fullName>
            </value>
            <value>
                <fullName>Room occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>