force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Security_Protocol_Issue__c.field-meta.xml
<CustomField>
    <fullName>sked_Security_Protocol_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Security Protocol Required Additional Time</inlineHelpText>
    <label>Security Protocol Issue</label>
    <type>Checkbox</type>
</CustomField>