force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Security_Protocol_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Security_Protocol_Issue_Reason__c</fullName>
    <label>Security Protocol Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security line</fullName>
            </value>
            <value>
                <fullName>Security list</fullName>
            </value>
            <value>
                <fullName>Training needed to access building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>