force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Setup__c.field-meta.xml
<CustomField>
    <fullName>sked_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Setup</label>
    <type>Checkbox</type>
</CustomField>