force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Setup_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Setup_Reason__c</fullName>
    <label>Setup Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Table/Chair availability</fullName>
            </value>
            <value>
                <fullName>Electrical availability</fullName>
            </value>
            <value>
                <fullName>Additional setup time needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>