force-app/main/default/objects/sked_Operation_Record__c/fields/sked_ShiftID_Integer__c.field-meta.xml
<CustomField>
    <fullName>sked_ShiftID_Integer__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>ShiftID Integer</label>
    <type>AutoNumber</type>
</CustomField>