force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Address__c</fullName>
    <formula>sked_Drive_Site__r.sked__Address__c</formula>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>