force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Staff__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff</label>
    <type>Checkbox</type>
</CustomField>