force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Staff_Truck__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Truck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff/Truck</label>
    <type>Checkbox</type>
</CustomField>