force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Staff_Truck_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Truck_Reason__c</fullName>
    <label>Staff/Truck Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrived late weather</fullName>
            </value>
            <value>
                <fullName>Arrived late directions</fullName>
            </value>
            <value>
                <fullName>Arrived late traffic</fullName>
            </value>
            <value>
                <fullName>Arrived late &quot;other&quot;</fullName>
            </value>
            <value>
                <fullName>Staff call outs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>