force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_Time__c</fullName>
    <formula>sked_Drive__r.sked_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>