force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>sked_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Operation Records</relationshipLabel>
    <relationshipName>sked_Submitted_Operation_Records</relationshipName>
    <type>Lookup</type>
</CustomField>