force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Supervisor_Charge_Signature__c.field-meta.xml
<CustomField>
    <fullName>sked_Supervisor_Charge_Signature__c</fullName>
    <label>Supervisor/Charge Signature</label>
    <type>TextArea</type>
</CustomField>