force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Time_Entry_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Entry_Code__c</fullName>
    <label>Time Entry Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>