force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>