force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Vehicle_Malfunction__c.field-meta.xml
<CustomField>
    <fullName>sked_Vehicle_Malfunction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Malfunction</label>
    <type>Checkbox</type>
</CustomField>